--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "bcryptjs": "^2.4.3",
+    "clarifai": "^2.9.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
     "esm": "^3.2.25",
