--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clarifai": "^2.9.1",
     "cors": "^2.8.5",
     "crypto-js": "^4.0.0",
+    "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "knex": "^0.21.1",
