-r esm from start

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -r esm serverFD.js",
+    "start": "node serverFD.js",
     "start:dev": "node serverFD.js"
   },
   "repository": {
